# realtime-translation-1

./: .gitignore  README.md
.configure/: environment.ps1  infra.ps1  linters.ps1
.github/workflows/: azure-static-web-apps-kind-bush-0e8a3ab03.yml
infra/: main.bicep
infra/modules/: aca.bicep  acr.bicep  acs.bicep  aoai.bicep  bing.bicep  blob.bicep  cosmos.bicep  event.bicep  loga.bicep  staticwapp.bicep  vnet.bicep
src/: readme.md
src/backend/: .env.sample  pyproject.toml
src/backend/app/: __init__.py  auth.py  main.py  processor.py  room.py  router.py  streaming.py  transcript.py  user.py
src/backend/app/realtime/: __init__.py  api.py  audio_utils.py  client.py  conversation.py  event_system.py  room.py
src/backend/contextualizer/: pdf_ingestion.py
src/backend/orchestrator/: README.md  __init__.py  auth.py  background.py  main.py  utils.py
src/backend/orchestrator/engine/: __init__.py  client.py  helpers.py  observer.py
src/backend/orchestrator/engine/prompts/: consignado.jinja  interpreter.jinja
src/backend/orchestrator/schemas/: endpoints.py  models.py  responses.py
src/backend/room/: __init__.py  client.py  main.py  room.py  session.py  user.py
src/backend/room/schemas/: __init__.py  endpoints.py  models.py  responses.py
src/frontend/: .gitignore  next.config.mjs  package-lock.json  package.json
src/frontend/app/: layout.tsx  page.tsx
src/frontend/app/room/[roomId]/: page.tsx
src/frontend/app/signin/: page.tsx
src/frontend/app/signup/: page.tsx
src/frontend/app/simulate/[roomId]/: page.tsx
src/frontend/components/CallCompositeWrapper/: index.tsx
src/frontend/hooks/: useMediaStream.ts  useUserMedia.ts  useWebSocket.ts
src/frontend/utils/: api.ts  callClientSingleton.ts  mediaUtils.ts  mse.ts  sessionWebSocket.ts  wav.ts  websocket.ts
